--- a/resources/style.css
+++ b/resources/style.css
@@ -16,7 +16,7 @@ body {
 
 section {
     margin: 1rem auto 7rem;
-    padding: 0 10rem;
+    padding: 0 15rem;
 }
 
 h1 {
@@ -25,6 +25,7 @@ h1 {
 
 h2 {
     font-size: 5rem;
+    margin-bottom: 3rem;
 }
 
 p {
@@ -35,6 +36,13 @@ label {
     font-size: 3rem;
 }
 
+#flex-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+}
+
 #genre {
     width: 20vw;
     height: 3rem;
@@ -42,7 +50,7 @@ label {
 }
 
 #movie-poster {
-    width: 50vw;
+    width: 25vw;
 }
 
 #search-button {
