--- a/resources/style.css
+++ b/resources/style.css
@@ -14,11 +14,6 @@ body {
     text-align: center;
 }
 
-section {
-    margin: 1rem auto 7rem;
-    padding: 0 15rem;
-}
-
 h1 {
     font-size: 10rem;
 }
@@ -36,11 +31,8 @@ label {
     font-size: 3rem;
 }
 
-#flex-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5rem;
+#form-section {
+    margin: 1rem auto 7rem;
 }
 
 #genre {
@@ -49,11 +41,90 @@ label {
     font-size: 1.5rem;
 }
 
+#result-section {
+    padding: 0 15rem;
+}
+
+#flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+}
+
+#movie-figure {
+    width: 50%;
+}
+
 #movie-poster {
-    width: 25vw;
+    width: 70%;
+}
+
+#movie-overview {
+    width: 45%;
 }
 
 #search-button {
     font-size: 2rem;
     padding: 0.3rem;
+}
+
+@media only screen and (max-width: 1024px) {
+    #flex-container {
+        flex-wrap: wrap;
+    }
+
+    #movie-figure {
+        width: 100%;
+    }
+
+    #movie-overview {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    h1 {
+        font-size: 7rem;
+    }
+
+    h2, label {
+        font-size: 3rem;
+    }
+
+    p {
+        font-size: 2rem;
+    }
+
+    #result-section {
+        padding: 0 2rem;
+    }
+
+    #genre {
+        width: 50vw;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    h1 {
+        font-size: 5rem;
+    }
+
+    h2, label {
+        font-size: 2.5rem;
+    }
+
+    p {
+        font-size: 1.5rem;
+    }
+
+    #form-section {
+        margin: 1rem auto 5rem;
+    }
+
+    #search-button {
+        font-size: 1.5rem;
+        padding: 0.3rem;
+    }
 }
