--- a/resources/style.css
+++ b/resources/style.css
@@ -4,18 +4,24 @@
     box-sizing: border-box;
 }
 
+:root {
+    --background: hsl(330, 70%, 15%);
+    --main-pink: hsl(320, 100%, 85%);
+}
+
 html {
-    background-color: black;
+    background-color: var(--background);
     font-size: 62.5%;
 }
 
 body {
-    color: red;
+    color: var(--main-pink);
     text-align: center;
 }
 
 h1 {
     font-size: 10rem;
+    margin-bottom: 3rem;
 }
 
 h2 {
@@ -39,6 +45,7 @@ label {
     width: 20vw;
     height: 3rem;
     font-size: 1.5rem;
+    color: var(--background);
 }
 
 #result-section {
@@ -67,7 +74,25 @@ label {
 
 #search-button {
     font-size: 2rem;
+    font-weight: bold;
     padding: 0.3rem;
+    background-color: var(--main-pink);
+    color: var(--background);
+    border: 0.1rem solid var(--background);
+    border-image: none;
+    box-shadow: 0.3rem 0.3rem black;
+}
+
+#search-button:hover {
+    cursor: pointer;
+    background-color: var(--background);
+    color: var(--main-pink);
+    border: 0.1rem solid var(--main-pink);
+}
+
+#search-button:active {
+    box-shadow: 0.1rem 0.1rem black;
+    transform: translate(0.2rem, 0.2rem);
 }
 
 @media only screen and (max-width: 1024px) {
