--- a/resources/style.css
+++ b/resources/style.css
@@ -28,7 +28,7 @@ h1 {
 
 h2 {
     font-size: 5rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 
 p {
@@ -54,6 +54,10 @@ label {
 
 #result-section {
     padding: 0 15rem;
+}
+
+#movie-release-date {
+    margin-bottom: 3rem;
 }
 
 #flex-container {
@@ -153,4 +157,9 @@ label {
         font-size: 1.5rem;
         padding: 0.3rem;
     }
+}
+
+footer {
+    margin-top: 5rem;
+    margin-bottom: 1rem;
 }
